--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "backpack build",
-    "test": "xo && yarn build; ava"
+    "test": "yarn build && xo && ava"
   },
   "devDependencies": {
     "ava": "^0.18.2",
